graph500 test result (local machine)

--- a/notebook/web-graph-lab.ipynb
+++ b/notebook/web-graph-lab.ipynb
@@ -11,8 +11,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Реализовать алгоритм построения случайного веб-графа в модели Боллобаша–Риордана (различные n=4000+,\n",
-    "m=10..16). Определить параметры графов в этой модели."
+    "###  1. На ноутбуке запустить тест Graph500 (референс код), определить характеристики теста."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Характеристики машины:**\n",
+    "\n",
+    "``` \n",
+    "    OS: Linux Ubuntu 16.04\n",
+    "    CPU: Intel(R) Core(TM)2 Quad CPU    Q8400  @ 2.66GHz\n",
+    "    Cores: 4\n",
+    "    RAM: 4 Gb\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Для эксперимента была выбрана имплементация omp-csr/omp-csr (OpenMP compressed-sparse-row implementation).\n",
+    "\n",
+    "\n",
+    "Перед запуском была проведена сборка исполняемых файлов из исходного кода с помощью make.\n",
+    "\n",
+    "Запуск выполнялся с помощью следующей команды:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "        $ GRAPH_500_HOME/omp-csr -R -s 16 -e 18"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Результаты:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```SCALE: 16\n",
+    "nvtx: 65536\n",
+    "edgefactor: 18\n",
+    "terasize: 1.88743679999999992e-05\n",
+    "A: 5.69999999999999951e-01\n",
+    "B: 1.90000000000000002e-01\n",
+    "C: 1.90000000000000002e-01\n",
+    "D: 5.00000000000000444e-02\n",
+    "generation_time: 4.16971298500000032e+00\n",
+    "construction_time: 2.52387813999999988e-01\n",
+    "nbfs: 64\n",
+    "min_time: 5.96573600000000013e-03\n",
+    "firstquartile_time: 6.40751975000000001e-03\n",
+    "median_time: 6.68043900000000069e-03\n",
+    "thirdquartile_time: 1.51687605000000014e-02\n",
+    "max_time: 5.67231670000000049e-02\n",
+    "mean_time: 1.03665170937499995e-02\n",
+    "stddev_time: 8.14300499660491374e-03\n",
+    "min_nedge: 1.17936000000000000e+06\n",
+    "firstquartile_nedge: 1.17936000000000000e+06\n",
+    "median_nedge: 1.17936000000000000e+06\n",
+    "thirdquartile_nedge: 1.17936000000000000e+06\n",
+    "max_nedge: 1.17936000000000000e+06\n",
+    "mean_nedge: 1.17936000000000000e+06\n",
+    "stddev_nedge: 0.00000000000000000e+00\n",
+    "min_TEPS: 2.07915048184809536e+07\n",
+    "firstquartile_TEPS: 8.46028180691929907e+07\n",
+    "median_TEPS: 1.77133831611911654e+08\n",
+    "thirdquartile_TEPS: 1.84724675956493437e+08\n",
+    "max_TEPS: 1.97688935614985317e+08\n",
+    "harmonic_mean_TEPS: 1.13766271673929840e+08\n",
+    "harmonic_stddev_TEPS: 1.12588772460629009e+07\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Максимальный полученный **TEPS: 0.197 GTEPS**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Реализовать алгоритм построения случайного веб-графа в модели Боллобаша–Риордана (различные n=4000+, m=10..16). Определить параметры графов в этой модели."
    ]
   },
   {
