graph500 test result (local machine)

--- a/notebook/web-graph-lab.ipynb
+++ b/notebook/web-graph-lab.ipynb
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Максимальный полученный **TEPS: 0.197 GTEPS**"
+    "Максимальный полученный результат: **0.197 GTEPS**"
    ]
   },
   {
