Add graph500 cluster results

--- a/notebook/web-graph-lab.ipynb
+++ b/notebook/web-graph-lab.ipynb
@@ -44,7 +44,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "        $ GRAPH_500_HOME/omp-csr -R -s 16 -e 18"
+    "       $ export OMP_NUM_THREADS=4\n",
+    "       \n",
+    "       $ GRAPH_500_HOME/omp-csr -R -s 16 -e 16"
    ]
   },
   {
@@ -61,36 +63,37 @@
     "```\n",
     "    SCALE: 16\n",
     "    nvtx: 65536\n",
-    "    edgefactor: 18\n",
+    "    edgefactor: 16\n",
     "    terasize: 1.88743679999999992e-05\n",
     "    A: 5.69999999999999951e-01\n",
     "    B: 1.90000000000000002e-01\n",
     "    C: 1.90000000000000002e-01\n",
     "    D: 5.00000000000000444e-02\n",
-    "    generation_time: 4.16971298500000032e+00\n",
-    "    construction_time: 2.52387813999999988e-01\n",
+    "    generation_time: 4.19111294400000034e+00\n",
+    "    construction_time: 2.54860640999999999e-01\n",
     "    nbfs: 64\n",
-    "    min_time: 5.96573600000000013e-03\n",
-    "    firstquartile_time: 6.40751975000000001e-03\n",
-    "    median_time: 6.68043900000000069e-03\n",
-    "    thirdquartile_time: 1.51687605000000014e-02\n",
-    "    max_time: 5.67231670000000049e-02\n",
-    "    mean_time: 1.03665170937499995e-02\n",
-    "    stddev_time: 8.14300499660491374e-03\n",
-    "    min_nedge: 1.17936000000000000e+06\n",
-    "    firstquartile_nedge: 1.17936000000000000e+06\n",
-    "    median_nedge: 1.17936000000000000e+06\n",
-    "    thirdquartile_nedge: 1.17936000000000000e+06\n",
-    "    max_nedge: 1.17936000000000000e+06\n",
-    "    mean_nedge: 1.17936000000000000e+06\n",
+    "    min_time: 5.36578700000000033e-03\n",
+    "    firstquartile_time: 5.62329550000000098e-03\n",
+    "    median_time: 5.78980000000000033e-03\n",
+    "    thirdquartile_time: 6.11765824999999965e-03\n",
+    "    max_time: 6.53641600000000062e-03\n",
+    "    mean_time: 5.84278875000000027e-03\n",
+    "    stddev_time: 2.97689665613503295e-04\n",
+    "    min_nedge: 1.17848000000000000e+06\n",
+    "    firstquartile_nedge: 1.17848000000000000e+06\n",
+    "    median_nedge: 1.17848000000000000e+06\n",
+    "    thirdquartile_nedge: 1.17848000000000000e+06\n",
+    "    max_nedge: 1.17848000000000000e+06\n",
+    "    mean_nedge: 1.17848000000000000e+06\n",
     "    stddev_nedge: 0.00000000000000000e+00\n",
-    "    min_TEPS: 2.07915048184809536e+07\n",
-    "    firstquartile_TEPS: 8.46028180691929907e+07\n",
-    "    median_TEPS: 1.77133831611911654e+08\n",
-    "    thirdquartile_TEPS: 1.84724675956493437e+08\n",
-    "    max_TEPS: 1.97688935614985317e+08\n",
-    "    harmonic_mean_TEPS: 1.13766271673929840e+08\n",
-    "    harmonic_stddev_TEPS: 1.12588772460629009e+07\n",
+    "    min_TEPS: 1.80294522258069247e+08\n",
+    "    firstquartile_TEPS: 1.93186815278800488e+08\n",
+    "    median_TEPS: 2.04315596703005135e+08\n",
+    "    thirdquartile_TEPS: 2.09786700076756090e+08\n",
+    "    max_TEPS: 2.19628546567353487e+08\n",
+    "    harmonic_mean_TEPS: 2.01698204474703968e+08\n",
+    "    harmonic_stddev_TEPS: 1.29471843339292752e+06\n",
+    "\n",
     "```"
    ]
   },
@@ -98,7 +101,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Максимальный полученный результат: **0.197 GTEPS**"
+    "Максимальный полученный результат: **0.219 GTEPS**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. На каком-либо кластере запустить параллельную версию теста"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Для запуска теста использовался кластер из 6 машин со следующими характеристиками:\n",
+    "\n",
+    "``` \n",
+    "    Ubuntu 16.04\n",
+    "    RAM: 8Gb\n",
+    "    CPU: Intel(R) Xeon(R) CPU E5-2609 v2 @ 2.50GHz\n",
+    "    Cores: 2\n",
+    "    \n",
+    "```\n",
+    "\n",
+    "Всего кластер насчитывал 12 ядер, однако так как \n",
+    "\n",
+    "```\"Number of processes 12 is not a power of two, yet SIZE_MUST_BE_A_POWER_OF_TWO is defined in main.cpp.\",```\n",
+    "\n",
+    "то тест был запущен на 8 процессах (по 2 процесса на 4-ех машинах).\n",
+    "\n",
+    "```\n",
+    "    mpirun -n 8 -v --mca plm_rsh_no_tree_spawn 1 --mca orte_base_help_aggregate 0 -machinefile machinefile graph500_mpi_simple 16\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Результаты:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```SCALE:                          16\n",
+    "edgefactor:                     16\n",
+    "NBFS:                           64\n",
+    "graph_generation:               0.615475\n",
+    "num_mpi_processes:              8\n",
+    "construction_time:              0.366006\n",
+    "min_time:                       0.11486\n",
+    "firstquartile_time:             0.133111\n",
+    "median_time:                    0.16339\n",
+    "thirdquartile_time:             0.184755\n",
+    "max_time:                       0.327835\n",
+    "mean_time:                      0.171054\n",
+    "stddev_time:                    0.0513058\n",
+    "min_nedge:                      1048570\n",
+    "firstquartile_nedge:            1048570\n",
+    "median_nedge:                   1048570\n",
+    "thirdquartile_nedge:            1048570\n",
+    "max_nedge:                      1048570\n",
+    "mean_nedge:                     1048570\n",
+    "stddev_nedge:                   0\n",
+    "min_TEPS:                       3.19847e+06\n",
+    "firstquartile_TEPS:             5.67545e+06\n",
+    "median_TEPS:                    6.41761e+06\n",
+    "thirdquartile_TEPS:             7.87741e+06\n",
+    "max_TEPS:                       9.12911e+06\n",
+    "harmonic_mean_TEPS:             6.13005e+06\n",
+    "harmonic_stddev_TEPS:           231647\n",
+    "min_validate:                   4.83797\n",
+    "firstquartile_validate:         7.07494\n",
+    "median_validate:                7.22191\n",
+    "thirdquartile_validate:         7.43186\n",
+    "max_validate:                   8.14439\n",
+    "mean_validate:                  7.19529\n",
+    "stddev_validate:                0.505963```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Максимальный полученный результат: **0.009 GTEPS**"
    ]
   },
   {
